--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "dependencies": {
     "lodash": "^4.17.21"
   },
-  "main": "webpack.config.js"
+  "main": "webpack.config.js",
    "jest": {
     "testEnvironment": "jsdom"
   }
